--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.0.0"
+    "vue-material": "^1.0.0-beta-10.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
